deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-app
  namespace: journal-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journal-app
  template:
    metadata:
      labels:
        app: journal-app
    spec:
      containers:
        - name: journal-app
          image: raajkr07/journal-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /journal/actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /journal/actuator/health
              port: 8080
            initialDelaySeconds: 80
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 5
