kafka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: journal-app
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
      name: kafka-port
  selector:
    app: kafka
