kafka-zk.yml
---
apiVersion: v1
kind: Service
metadata:
  name: journal-zookeeper
  namespace: journal-app
  labels:
    app: zookeeper
spec:
  ports:
    - port: 2181
      name: client
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-zookeeper
  namespace: journal-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: zookeeper:latest        # Official ZooKeeper image
          ports:
            - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: journal-app
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
      name: kafka-port
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: journal-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      hostname: kafka
      containers:
        - name: kafka
          image: wurstmeister/kafka:latest   # Valid tag on Docker Hub
          ports:
            - containerPort: 9092
