redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: journal-app
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
